# webCAM

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  design.md  package-lock.json  playwright.config.ts
block-registry/: Cargo.toml
block-registry/src/: constant.rs  data_driven.rs  embedded.rs  function.rs  lib.rs  plot.rs  pubsub.rs  register.rs  registry.rs  serde_block.rs  state_machine.rs  udp.rs
codegen-emit/: Cargo.toml
codegen-emit/src/: concurrency.rs  emit.rs  lib.rs  snapshot.rs  topo.rs  types.rs
configurable-blocks/: Cargo.toml
configurable-blocks/src/: codegen.rs  deployment_profile.rs  lib.rs  lower.rs  registry.rs  schema.rs
configurable-blocks/src/blocks/: basic.rs  i2c.rs  mod.rs  pid.rs  smbus.rs
crates/rustcam/: Cargo.toml
crates/rustcam/src/: gcode_parser.rs  lib.rs  machine.rs  slicer.rs  stl.rs  svg.rs  tool.rs  toolpath.rs  units.rs  wasm_api.rs
crates/rustcam/tests/: surface_3d_integration.rs
crates/rustsim/: Cargo.toml
crates/rustsim/bindings/: AdcConfig.ts  ConstantConfig.ts  EncoderConfig.ts  FunctionConfig.ts  PubSubConfig.ts  Ssd1306DisplayConfig.ts  StateMachineConfig.ts  Tmc2209StepperConfig.ts  TransitionAction.ts  TransitionConfig.ts  TransitionGuard.ts  UartRxConfig.ts
crates/rustsim/src/: dag_api.rs  lib.rs  wasm_api.rs
crates/rustsim/src/dataflow/: block.rs  channel.rs  connection.rs  dsl_bridge.rs  graph.rs  mod.rs  panel.rs  sim_peripherals.rs
crates/rustsim/src/dataflow/blocks/: constant.rs  data_driven.rs  embedded.rs  function.rs  (+8 more)
crates/rustsim/tests/: block_workflows.rs
dag-core/: Cargo.toml
dag-core/src/: builder.rs  cbor.rs  eval.rs  json.rs  lib.rs  op.rs  templates.rs  types.rs
dag-core/tests/: pubsub_e2e.rs
dag-runtime/: Cargo.toml
dag-runtime/src/: channels.rs  executor.rs  http.rs  lib.rs  pubsub.rs  serve.rs
dag-runtime/tests/: integration.rs
deployment/: Cargo.toml
deployment/src/: lib.rs  manifest.rs  partition.rs  validate.rs
graph-model/: Cargo.toml
graph-model/src/: lib.rs
hil/board-config-common/: Cargo.toml
hil/board-config-common/src/: i2c0.rs  i2c1.rs  i2c2.rs  i2c3.rs  i2c4.rs  i2c5.rs  i2c6.rs  i2c7.rs  i2c8.rs  i2c9.rs  lib.rs  network.rs
hil/board-config-common/tests/: i2c0.rs  i2c1.rs  i2c2.rs  i2c3.rs  i2c4.rs  i2c5.rs  i2c6.rs  i2c7.rs  i2c8.rs  i2c9.rs
hil/board-support-pi-zero/: Cargo.toml
hil/board-support-pi-zero/src/: combined_buses.rs  dap_processor.rs  linux_i2c.rs  main.rs  ws_server.rs
hil/board-support-pico2/: Cargo.toml  build.rs  memory.x
hil/board-support-pico2/src/: dag_handler.rs  dap_pins.rs  dap_task.rs  heap_init.rs  http_static.rs  main.rs  shared_buses.rs  ws_server.rs
hil/board-support-stm32/: Cargo.toml  build.rs  memory-stm32f401cc.x  memory-stm32f411ce.x  memory-stm32h743vi.x
hil/board-support-stm32/src/: chip.rs  main.rs  ws_dispatch.rs  ws_server.rs
hil/combined-frontend/: Cargo.toml  index.html  style.css
hil/combined-frontend/src/: app.rs  backoff.rs  cam_config.rs  edge_math.rs  firmware_util.rs  graph_engine.rs  graph_state.rs  hex.rs  lib.rs  main.rs  messages.rs  panel_types.rs  plot_math.rs  sim_mode.rs  sim_move.rs  sim_util.rs  sketch.rs  state_machine_config.rs  theme.rs  types.rs  ws_client.rs  zip.rs
hil/combined-frontend/src/components/: header.rs  keyboard.rs  mod.rs  tab_bar.rs
hil/combined-frontend/tests/: drag_wasm.rs  integration_tests.rs
hil/dap-dispatch/: Cargo.toml
hil/dap-dispatch/src/: cbor_dispatch.rs  lib.rs  protocol.rs  stub.rs  usb_class.rs
hil/hil-backplane/: Cargo.toml
hil/hil-backplane/examples/: sensor_network.rs
hil/hil-backplane/src/: codec.rs  dhcp.rs  discovery.rs  dispatcher.rs  embassy_node.rs  envelope.rs  error.rs  lib.rs  message.rs  node.rs  node_id.rs  transport.rs
hil/hil-backplane/src/transport/: udp.rs
hil/hil-backplane/tests/: codec.rs  dhcp.rs  discovery.rs  dispatcher.rs  envelope_roundtrip.rs  pubsub.rs  req_resp.rs  type_id_hash.rs
hil/hil-firmware-support/: Cargo.toml
hil/hil-firmware-support/src/: fw_update.rs  http_static.rs  lib.rs  runtime_buses.rs  ws_dispatch.rs  ws_framing.rs  ws_server.rs
hil/hil-frontend/: Cargo.toml  index.html  style.css
hil/hil-frontend/src/: app.rs  components.rs  lib.rs  main.rs
hil/hil-frontend/src/components/: bus_overview.rs  fan.rs  firmware_update.rs  i2c_console.rs  power.rs  temperature.rs
hil/i2c-hil-devices/: Cargo.toml  design.md
hil/i2c-hil-devices/src/: adm1272.rs  bmr4696001.rs  bmr491.rs  emc2305.rs  ina230.rs  isl68224.rs  lib.rs  ltc4287.rs  raa228926.rs  tps546b24a.rs
hil/i2c-hil-devices/tests/: adm1272.rs  bmr4696001.rs  bmr491.rs  ina230.rs  isl68224.rs  ltc4287.rs  raa228926.rs  tps546b24a.rs
hil/native-server/: Cargo.toml
hil/native-server/src/: lib.rs  main.rs
hil/native-server/tests/: pubsub_e2e.rs
hil/pico-bootloader/: Cargo.toml  build.rs  memory.x
hil/pico-bootloader/src/: main.rs
hil/usb-can-dispatcher/: Cargo.toml
hil/usb-can-dispatcher/src/: can.rs  class.rs  lib.rs  protocol.rs
hil/usb-composite-dispatchers/: Cargo.toml
hil/usb-composite-dispatchers/src/: i2c_tiny_usb.rs  lib.rs
hil/usb-gpio-dispatcher/: Cargo.toml
hil/usb-gpio-dispatcher/src/: class.rs  gpio.rs  lib.rs  protocol.rs
mlir-codegen/: Cargo.toml  MLIR.md
mlir-codegen/src/: c_types.rs  dialect.rs  emit_rust.rs  ir.rs  lib.rs  lower.rs  peripherals.rs  pipeline.rs  printer.rs  runtime.rs  state_machine.rs
mlir-codegen/tests/: ir_pipeline_integration.rs  multi_target.rs  pipeline_integration.rs
module-traits/: Cargo.toml
module-traits/src/: analysis.rs  async_block.rs  codegen_trait.rs  deployment.rs  function_def.rs  hardware.rs  inventory.rs  lib.rs  module.rs  registry.rs  sim.rs  tick.rs  value.rs
pubsub/: Cargo.toml
pubsub/src/: addr.rs  broker.rs  discovery.rs  frame.rs  lib.rs  node.rs  payload.rs  router.rs  topic.rs
pubsub/src/transport/: can.rs  ip.rs  lin.rs  mod.rs  pmbus.rs
target-registry/: Cargo.toml
target-registry/src/: binding.rs  lib.rs  target.rs
target-registry/src/generators/: esp32c3.rs  host.rs  mod.rs  rp2040.rs  stm32f4.rs  stm32g0b1.rs
(+265 files in other folders)
