[workspace]
resolver = "2"
members = [
    "crates/rustcam",
    "crates/rustsim",
    "graph-model",
    "module-traits",
    "dag-core",
    "dag-runtime",
    "dataflow-rt",
    "pubsub",
    "parser",
    "hil/i2c-hil-sim",
    "hil/i2c-hil-devices",
    "hil/usb-composite-dispatchers",
    "hil/usb-can-dispatcher",
    "hil/usb-gpio-dispatcher",
    "hil/hil-backplane",
    "hil/board-config-common",
    "hil/hil-firmware-support",
    "hil/dap-dispatch",
    "hil/board-support-pico",
    "hil/board-support-pico2",
    "hil/board-support-stm32",
    "hil/board-support-pi-zero",
    "hil/pico-bootloader",
    "hil/hil-frontend",
    "hil/combined-frontend",
    "hil/native-server",
    "mlir-codegen",
    "block-registry",
    "configurable-blocks",
]
default-members = [
    "crates/rustcam",
    "crates/rustsim",
    "graph-model",
    "module-traits",
    "dag-core",
    "dag-runtime",
    "dataflow-rt",
    "pubsub",
    "parser",
    "mlir-codegen",
    "block-registry",
    "configurable-blocks",
    "hil/native-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
unwrap_in_result = "deny"
expect_used = "warn"
panic = "warn"
undocumented_unsafe_blocks = "deny"
missing_panics_doc = "deny"
unnecessary_safety_doc = "warn"
result_unit_err = "allow"
drop_non_drop = "allow"
needless_question_mark = "warn"

[workspace.dependencies]
module-traits = { path = "module-traits" }
dag-core = { path = "dag-core", default-features = false }
dag-runtime = { path = "dag-runtime" }
embedded-hal = "1.0"
embedded-can = "0.4"
embassy-usb = { version = "0.4", default-features = false, features = ["defmt"] }
embassy-usb-driver = "0.1"
i2c-hil-sim = { path = "hil/i2c-hil-sim" }
i2c-hil-devices = { path = "hil/i2c-hil-devices" }
usb-composite-dispatchers = { path = "hil/usb-composite-dispatchers" }
gs-usb-device = { path = "hil/usb-can-dispatcher" }
vprbrd-usb-gpio = { path = "hil/usb-gpio-dispatcher" }
defmt = "0.3"
board-config-common = { path = "hil/board-config-common" }
hil-backplane = { path = "hil/hil-backplane", default-features = false }
hil-firmware-support = { path = "hil/hil-firmware-support" }
dap-dispatch = { path = "hil/dap-dispatch" }
embassy-stm32 = { version = "0.2", default-features = false }
sha1_smol = "1"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
lto = "off"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[patch.crates-io]
embassy-rp = { path = "hil/embassy-rp-patched" }
