[package]
name = "configurable-blocks"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "User-configurable composite blocks with IL generation and deployment integration"

[features]
default = ["std"]
std = ["dag-core/std"]

[dependencies]
dag-core = { path = "../dag-core", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
