[package]
name = "deployment"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
graph-model = { path = "../graph-model" }
module-traits = { path = "../module-traits" }
target-registry = { path = "../target-registry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
