[package]
name = "graph-model"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Canonical dataflow graph model types shared across crates"

[dependencies]
module-traits = { path = "../module-traits" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
