[package]
name = "module-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trait definitions for the RustCAM dataflow module system"

[lints]
workspace = true

[features]
default = []
tsify = ["dep:tsify-next", "dep:wasm-bindgen"]
typed-ports = ["dag-core"]

[dependencies]
dag-core = { path = "../dag-core", default-features = false, features = ["serde"], optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tsify-next = { version = "0.5", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
