[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

[features]
default = ["cbor"]
alloc = ["minicbor?/alloc"]
std = ["alloc", "ip"]
can = ["embedded-can", "dep:nb"]
lin = ["embedded-hal"]
pmbus = ["embedded-hal"]
ip = ["std"]
cbor = ["minicbor"]

[dependencies]
minicbor = { version = "0.25", default-features = false, optional = true }
embedded-can = { version = "0.4", optional = true }
embedded-hal = { version = "1.0", optional = true }
heapless = "0.8"
nb = { version = "1", optional = true }

[dev-dependencies]
minicbor = { version = "0.25", features = ["alloc"] }
