[package]
name = "rustsim"
version = "0.1.0"
edition = "2021"
description = "Model-based dataflow development — visual block editor with multi-target embedded codegen"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
mlir = ["mlir-codegen"]

[dependencies]
module-traits = { path = "../../module-traits" }
parser = { path = "../../parser" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dag-core = { path = "../../dag-core", default-features = false, features = ["std"] }
i2c-hil-sim = { path = "../../hil/i2c-hil-sim" }
embedded-hal = "1.0"
mlir-codegen = { path = "../../mlir-codegen", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

