[package]
name = "board-support-pico2"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"

defmt = { workspace = true }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-65536"] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-usb = { version = "0.4", default-features = false, features = ["defmt"] }
embassy-net = { version = "0.8", features = ["defmt", "medium-ethernet", "proto-ipv4", "proto-ipv6", "tcp", "udp"] }

embedded-hal = { workspace = true }
heapless = { version = "0.8", default-features = false }
hil-backplane = { workspace = true, default-features = false, features = ["embassy"] }
board-config-common = { workspace = true }
i2c-hil-sim = { workspace = true }
hil-firmware-support = { workspace = true, features = ["tcp"] }
usb-composite-dispatchers = { workspace = true }
dap-dispatch = { workspace = true, features = ["embassy-usb", "defmt"] }
dag-core = { workspace = true }
embedded-alloc = "0.6"
static_cell = "2"
portable-atomic = { version = "1.5.1", features = ["critical-section"] }

[build-dependencies]
flate2 = "1"
