[package]
name = "combined-frontend"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Combined Leptos frontend: HIL dashboard + DAG editor + deployment"

[lib]
name = "combined_frontend"
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
crc32fast = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "Blob",
    "BlobPropertyBag",
    "ErrorEvent",
    "CloseEvent",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WheelEvent",
    "File",
    "FileReader",
    "FileList",
    "ProgressEvent",
    "MouseEvent",
    "KeyboardEvent",
    "SvgElement",
    "Element",
    "DomRect",
    "HtmlBodyElement",
    "Url",
    "console",
    "Document",
    "Window",
    "Storage",
    "EventTarget",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Navigator",
    "Clipboard",
    "Url",
    "DragEvent",
    "DataTransfer",
] }
js-sys = "0.3"
minicbor = { version = "0.25", features = ["std"] }
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
module-traits = { path = "../../module-traits" }
dag-core = { path = "../../dag-core", default-features = false, features = ["std"] }
configurable-blocks = { path = "../../configurable-blocks" }
graph-model = { path = "../../graph-model" }
block-registry = { path = "../../block-registry", default-features = false }
codegen-emit = { path = "../../codegen-emit" }
target-registry = { path = "../../target-registry" }
deployment = { path = "../../deployment" }
rustcam = { path = "../../crates/rustcam" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
