[package]
name = "hil-backplane"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "UDP message backplane for HIL testing"

[dependencies]
minicbor = { version = "0.25", features = ["derive"] }
heapless = { version = "0.8" }

socket2 = { version = "0.5", optional = true, features = ["all"] }
embassy-net = { version = "0.8", optional = true, default-features = false, features = ["udp", "proto-ipv4", "medium-ip"] }

[features]
default = ["std"]
std = ["minicbor/std", "socket2"]
embassy = ["dep:embassy-net"]

[lints]
workspace = true
