[package]
name = "hil-firmware-support"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Shared firmware support library for HIL board binaries"

[lints]
workspace = true

[features]
default = []
embassy = [
    "dep:embassy-usb",
    "dep:embassy-usb-driver",
    "dep:embassy-net",
    "dep:embassy-time",
    "dep:static_cell",
    "dep:usb-composite-dispatchers",
    "dep:hil-backplane",
]
tcp = ["embassy", "embassy-net/tcp"]

[dependencies]
# Always available (core protocol, no embassy deps)
embedded-hal = { workspace = true }
i2c-hil-sim = { workspace = true }
defmt = { workspace = true }
heapless = { version = "0.8", default-features = false }
sha1_smol = { workspace = true }
minicbor = { version = "0.25", default-features = false }
crc32fast = { version = "1", default-features = false }

# Embassy-dependent (USB builder, NCM, net stack)
embassy-usb = { workspace = true, optional = true }
embassy-usb-driver = { workspace = true, optional = true }
embassy-net = { version = "0.8", features = ["defmt", "medium-ethernet", "proto-ipv4", "proto-ipv6", "udp"], optional = true }
embassy-time = { version = "0.4", features = ["defmt"], optional = true }
static_cell = { version = "2", optional = true }
usb-composite-dispatchers = { workspace = true, optional = true }
hil-backplane = { workspace = true, default-features = false, features = ["embassy"], optional = true }
