[package]
name = "native-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native DAG execution server with axum HTTP API"

[[bin]]
name = "native-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
dag-runtime = { path = "../../dag-runtime", features = ["std"] }
dag-core = { path = "../../dag-core", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
i2c-hil-sim = { path = "../../hil/i2c-hil-sim" }
embedded-hal = { workspace = true }
minicbor = { version = "0.25", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
