[package]
name = "usb-composite-dispatchers"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
defmt = { workspace = true }
embassy-usb = { version = "0.4", default-features = false, features = ["defmt"] }
embedded-hal = { workspace = true }

[dev-dependencies]
embassy-usb-driver = { workspace = true }
i2c-hil-sim = { workspace = true }
